# deployable_scraper

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.txt  README.md  compose.yml  docker_compose.yml  environment.yml  pyproject.toml  requirements.txt  start_container.sh
.github/workflows/: test.yml
sql_scripts/create/: create_availabilityAggregated_table.sql  create_availabilityLog_table.sql  create_connectorCounts_table.sql  create_connectorGroups_table.sql  create_evseIds_table.sql  create_latest_connectorGroups_newest_revision_view.sql  create_locations_table.sql
sql_scripts/select/: select_locationIds_by_plugType.sql
src/: db_tools.py  logging_config.py
src/main_scripts/: run_scraper_schedule.py  scrape_charger_locations.py  scrape_fast_charger_availability.py  scrape_rapid_charger_availability.py  scrape_standard_charger_availability.py
src/sql_scripts/create/: create_connectorGroups_table.sql  create_evseIds_table.sql
src/sql_scripts/select/: select_locationIds_by_plugType.sql
tests/: test_create_db.py  test_foreign_keys_on_availabilityAggregated.py  test_foreign_keys_on_availabilityLog.py  test_foreign_keys_on_connectorGroup.py  test_insert_availabilityLog.py  test_insert_connectorGroups.py  test_insert_locations.py  test_select_locationId_by_speed.py  test_tools.py
