[project]
name = "deployable_scraper"
version = "0.0.1"
description = "A deployable web scraper."
dependencies = [
    'sqlite',
    'numpy',
    "scraping-charger-data @ git+https://github.com/Mo1l/scraping_charger_data.git"
]

[project.urls]
Homepage = "https://github.com/nikol/deployable_scraper"

[tool.setuptools]
packages = ["deployable_scraper"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"