[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "deployable_scraper"
version = "0.0.1"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scraping-charger-data @ git+https://github.com/Mo1l/scraping_charger_data.git"
]

[project.urls]
Homepage = "https://github.com/Mo1l/deployable_scraper"

[tool.setuptools.packages.find]
where = ["src"]